feat: add inline styles for layout file

--- a/components/layout.templ
+++ b/components/layout.templ
@@ -10,10 +10,17 @@ templ layout(title string) {
 				rel="icon"
 				href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💼</text></svg>"
 			/>
-			<title>{ title }</title>
+			<style>
+			* {
+				margin: 0;
+				padding: 0;
+				box-sizing: border-box;
+			}
+			</style>
+			<title>AUTO JOB - { title }</title>
 		</head>
-		<body>
-			<header>
+		<body style="width: 100%; margin-inline: auto; max-width: 980px; padding: 0 1rem;">
+			<header style="display: flex; flex-direction: column; gap: 1rem;">
 				<h1>AUTO JOB</h1>
 				<p>
 					A simple site that helps you find a job through automation and
