--- a/components/signup.templ
+++ b/components/signup.templ
@@ -1,7 +1,7 @@
 package components
 
 templ Signup() {
-	@layout("Home") {
+	@Layout("Home") {
 		<main>
 			<fieldset>
 				<legend>Sign up</legend>
