feat: receiving login post req

--- a/components/signup.templ
+++ b/components/signup.templ
@@ -3,36 +3,34 @@ package components
 templ Signup() {
 	@Layout("Home") {
 		<main>
-			<fieldset>
-				<legend>Sign up</legend>
-				<form>
-					<div>
-						<label for="first-name">First name:</label>
-						<input id="first-name" type="text" required/>
-					</div>
-					<div>
-						<label for="last-name">Last name:</label>
-						<input id="last-name" type="text" required/>
-					</div>
-					<div>
-						<label for="email">Email:</label>
-						<input id="email" type="email" required/>
-					</div>
-					<div>
-						<label for="password">Password:</label>
-						<input id="password" type="password" required/>
-					</div>
-					<button type="submit">
-						<span>Submit</span>
-					</button>
-				</form>
-				<p>
-					<span>
-						Already have an account? Log in
-						<a href="/">here</a>.
-					</span>
-				</p>
-			</fieldset>
+			<h2>Sign up</h2>
+			<form>
+				<div>
+					<label for="first-name">First name:</label>
+					<input id="first-name" type="text" required/>
+				</div>
+				<div>
+					<label for="last-name">Last name:</label>
+					<input id="last-name" type="text" required/>
+				</div>
+				<div>
+					<label for="email">Email:</label>
+					<input id="email" type="email" required/>
+				</div>
+				<div>
+					<label for="password">Password:</label>
+					<input id="password" type="password" required/>
+				</div>
+				<button type="submit">
+					<span>Submit</span>
+				</button>
+			</form>
+			<p>
+				<span>
+					Already have an account? Log in
+					<a href="/">here</a>.
+				</span>
+			</p>
 		</main>
 	}
 }
