--- a/components/home.templ
+++ b/components/home.templ
@@ -3,28 +3,26 @@ package components
 templ Home() {
 	@Layout("Home") {
 		<main>
-			<fieldset>
-				<legend>Log in</legend>
-				<form method="post" action="/api/login">
-					<div>
-						<label for="email">Email:</label>
-						<input type="email" required/>
-					</div>
-					<div>
-						<label for="password">Password:</label>
-						<input type="password" required/>
-					</div>
-					<button type="submit">
-						<span>Submit</span>
-					</button>
-				</form>
-				<p>
-					<span>
-						Don't have an account? Sign up
-						<a href="/sign-up">here</a>.
-					</span>
-				</p>
-			</fieldset>
+			<h2>Log in</h2>
+			<form method="post" action="/auth/login">
+				<div>
+					<label for="email">Email:</label>
+					<input id="email" name="email" type="email" required/>
+				</div>
+				<div>
+					<label for="password">Password:</label>
+					<input id="password" name="password" type="password" required/>
+				</div>
+				<button type="submit">
+					<span>Submit</span>
+				</button>
+			</form>
+			<p>
+				<span>
+					Don't have an account? Sign up
+					<a href="/sign-up">here</a>.
+				</span>
+			</p>
 		</main>
 	}
 }
