feat: receiving signup post req

--- a/components/signup.templ
+++ b/components/signup.templ
@@ -4,22 +4,22 @@ templ Signup() {
 	@Layout("Home") {
 		<main>
 			<h2>Sign up</h2>
-			<form>
+			<form method="post" action="/auth/signup">
 				<div>
-					<label for="first-name">First name:</label>
-					<input id="first-name" type="text" required/>
+					<label for="first_name">First name:</label>
+					<input name="first_name" id="first_name" type="text" required/>
 				</div>
 				<div>
-					<label for="last-name">Last name:</label>
-					<input id="last-name" type="text" required/>
+					<label for="last_name">Last name:</label>
+					<input name="last_name" id="last_name" type="text" required/>
 				</div>
 				<div>
 					<label for="email">Email:</label>
-					<input id="email" type="email" required/>
+					<input name="email" id="email" type="email" required/>
 				</div>
 				<div>
 					<label for="password">Password:</label>
-					<input id="password" type="password" required/>
+					<input name="password" id="password" type="password" required/>
 				</div>
 				<button type="submit">
 					<span>Submit</span>
