--- a/components/home.templ
+++ b/components/home.templ
@@ -4,7 +4,7 @@ templ Home() {
 	@Layout("Home") {
 		<main>
 			<h2>Log in</h2>
-			<form method="post" action="/auth/login">
+			<form hx-post="/auth/login">
 				<div>
 					<label for="email">Email:</label>
 					<input id="email" name="email" type="email" required/>
