--- a/components/home.templ
+++ b/components/home.templ
@@ -4,7 +4,7 @@ templ Home() {
 	@Layout("Home") {
 		<main>
 			<h2>Log in</h2>
-			<form hx-post="/auth/login">
+			<form hx-post="/auth/login" hx-target="#response" hx-swap="innerHTML">
 				<div>
 					<label for="email">Email:</label>
 					<input id="email" name="email" type="email" required/>
@@ -16,6 +16,7 @@ templ Home() {
 				<button type="submit">
 					<span>Submit</span>
 				</button>
+				<span id="response"></span>
 			</form>
 			<p>
 				<span>
