feat: hand user object through to account page

--- a/components/account.templ
+++ b/components/account.templ
@@ -1,38 +1,17 @@
 package components
 
-templ Account() {
+import "autojob/models"
+import "fmt"
+
+templ Account(user models.User) {
 	@Layout("Account") {
 		<main>
-			<h2>Welcome to the authroised zone</h2>
-			// <h2>Sign up</h2>
-			// <form hx-post="/auth/signup" hx-target="#response" hx-swap="innerHTML">
-			// 	<div>
-			// 		<label for="first_name">First name:</label>
-			// 		<input name="first_name" id="first_name" type="text" required/>
-			// 	</div>
-			// 	<div>
-			// 		<label for="last_name">Last name:</label>
-			// 		<input name="last_name" id="last_name" type="text" required/>
-			// 	</div>
-			// 	<div>
-			// 		<label for="email">Email:</label>
-			// 		<input name="email" id="email" type="email" required/>
-			// 	</div>
-			// 	<div>
-			// 		<label for="password">Password:</label>
-			// 		<input name="password" id="password" type="password" required/>
-			// 	</div>
-			// 	<button type="submit">
-			// 		<span>Submit</span>
-			// 	</button>
-			// 	<span id="response"></span>
-			// </form>
-			// <p>
-			// 	<span>
-			// 		Already have an account? Log in
-			// 		<a href="/">here</a>.
-			// 	</span>
-			// </p>
+			<h2>Welcome to the authorised zone</h2>
+			<p>{ fmt.Sprint(user.ID) }</p>
+			<p>{ user.FirstName }</p>
+			<p>{ user.LastName }</p>
+			<p>{ user.Email }</p>
+			<p>{ user.Password }</p>
 		</main>
 	}
 }
