--- a/components/account.templ
+++ b/components/account.templ
@@ -1,18 +1,22 @@
 package components
 
 import "autojob/models"
-import "fmt"
 
 templ Account(user models.User) {
 	@Layout("Account") {
 		<main>
-			<a href="/auth/logout">Logout</a>
-			<h2>Welcome to the authorised zone</h2>
-			<p>{ fmt.Sprint(user.ID) }</p>
-			<p>{ user.FirstName }</p>
-			<p>{ user.LastName }</p>
-			<p>{ user.Email }</p>
-			<p>{ user.Password }</p>
+			@Nav()
+			<h2>{ user.FirstName }'s account</h2>
+			<form hx-post="/" hx-target="#response" hx-swap="innerHTML">
+				<div>
+					<textarea id="content" name="content" placeholder="Enter a sample cover letter content"></textarea>
+					<input type="file" id="file" name="file"/>
+				</div>
+				<button type="submit">
+					<span>Submit</span>
+				</button>
+				<span id="response"></span>
+			</form>
 		</main>
 	}
 }
