--- a/components/settings.templ
+++ b/components/settings.templ
@@ -3,11 +3,7 @@ package components
 import "autojob/models"
 
 templ Settings(user models.User) {
-	@Layout("Settings") {
-		<main>
-			@Nav()
-			<h2>My account</h2>
-			@SettingsForm(user, "GET")
-		</main>
+	@Dashboard(user, "Settings") {
+		@SettingsForm(user, "GET")
 	}
 }
