--- a/components/account.templ
+++ b/components/account.templ
@@ -5,5 +5,6 @@ import "autojob/models"
 templ Account(user models.User) {
 	@Dashboard(user, "Account") {
 		@Experience()
+		<div hx-get="/experience/" hx-trigger="every 1s"></div>
 	}
 }
