chore: add page suffix to page components

--- a/components/settings-page.templ
+++ b/components/settings-page.templ
@@ -2,7 +2,7 @@ package components
 
 import "autojob/models"
 
-templ Settings(user models.User) {
+templ SettingsPage(user models.User) {
 	@Dashboard(user, "Settings") {
 		@SettingsForm(user, "GET")
 	}
