--- a/components/account-page.templ
+++ b/components/account-page.templ
@@ -2,7 +2,7 @@ package components
 
 import "autojob/models"
 
-templ Account(user models.User) {
+templ AccountPage(user models.User) {
 	@Dashboard(user, "Account") {
 		@Experience()
 		<div hx-get="/experience/" hx-trigger="load once" hx-swap="outerHTML">
