--- a/components/nav.templ
+++ b/components/nav.templ
@@ -3,6 +3,7 @@ package components
 templ Nav() {
 	<nav>
 		<a href="/account">Account</a> |
+		<a href="/work-experience">Work Experience</a> |
 		<a href="/settings">Settings</a> |
 		<a href="/auth/logout">Logout</a> |
 	</nav>
