--- a/components/experience.templ
+++ b/components/experience.templ
@@ -21,7 +21,7 @@ templ Experience() {
 		<div id="current">
 			<label for="current">Current employer?:</label>
 			<input
-				hx-on:change="const finish = document.getElementById('finish'); finish.style.display = this.checked ? 'none' : 'block'; finish.querySelector('input').required = !this.checked;"
+				hx-on:change="const finish = document.getElementById('finish'); const input = finish.querySelector('input'); if (this.checked) { input.value = ''; finish.style.display = 'none'; input.required = false; } else { finish.style.display = 'block'; input.required = true; }"
 				type="checkbox"
 				name="current"
 			/>
