fix: update max width issue and make home nav

--- a/components/account-nav.templ
+++ b/components/account-nav.templ
@@ -1,10 +1,12 @@
 package components
 
-templ Nav() {
+templ AccountNav() {
 	<nav>
+		<hr/>
 		<a href="/account">Account</a> |
 		<a href="/work-experience">Work Experience</a> |
 		<a href="/settings">Settings</a> |
 		<a href="/auth/logout">Logout</a> |
+		<hr/>
 	</nav>
 }
