--- a/components/signup-page.templ
+++ b/components/signup-page.templ
@@ -2,36 +2,39 @@ package components
 
 templ SignupPage() {
 	@Layout("Home") {
-		<main>
-			<h2>Sign up</h2>
-			<form hx-post="/auth/signup" hx-target="#response" hx-swap="innerHTML">
-				<div>
-					<label for="first_name">First name:</label>
-					<input name="first_name" id="first_name" type="text" required/>
-				</div>
-				<div>
-					<label for="last_name">Last name:</label>
-					<input name="last_name" id="last_name" type="text" required/>
-				</div>
-				<div>
-					<label for="email">Email:</label>
-					<input name="email" id="email" type="email" required/>
-				</div>
-				<div>
-					<label for="password">Password:</label>
-					<input name="password" id="password" type="password" required/>
-				</div>
-				<button type="submit">
-					<span>Submit</span>
-				</button>
-				<span id="response"></span>
-			</form>
+		<section>
+			@HomeNav()
+			<fieldset>
+				<legend>Sign up</legend>
+				<form hx-post="/auth/signup" hx-target="#response" hx-swap="innerHTML">
+					<div>
+						<label for="first_name">First name:</label>
+						<input name="first_name" id="first_name" type="text" required/>
+					</div>
+					<div>
+						<label for="last_name">Last name:</label>
+						<input name="last_name" id="last_name" type="text" required/>
+					</div>
+					<div>
+						<label for="email">Email:</label>
+						<input name="email" id="email" type="email" required/>
+					</div>
+					<div>
+						<label for="password">Password:</label>
+						<input name="password" id="password" type="password" required/>
+					</div>
+					<button type="submit">
+						<span>Submit</span>
+					</button>
+					<span id="response"></span>
+				</form>
+			</fieldset>
 			<p>
 				<span>
 					Already have an account? Log in
 					<a href="/">here</a>.
 				</span>
 			</p>
-		</main>
+		</section>
 	}
 }
