--- a/components/layout.templ
+++ b/components/layout.templ
@@ -1,6 +1,6 @@
 package components
 
-templ Layout(title string) {
+templ Layout(title string, isLoggedIn bool) {
 	<!DOCTYPE html>
 	<html lang="en">
 		<head>
@@ -12,7 +12,7 @@ templ Layout(title string) {
 				href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💼</text></svg>"
 			/>
 			<style>
-			main {
+			main, header, footer {
 				width: 100%;
 				margin-inline: auto;
 				max-width: 980px;
@@ -21,14 +21,25 @@ templ Layout(title string) {
 			<title>AUTO JOB - { title }</title>
 		</head>
 		<body>
+			<header>
+				<h1>AUTO JOB</h1>
+				<p>A simple site that helps you find a job through automation and AI.</p>
+				<nav>
+					if isLoggedIn {
+						<a href="/">Account</a> |
+						<a href="/job-history">Job History</a> |
+						<a href="/cover-letter">Cover Letter</a> |
+						<a href="/settings">Settings</a> |
+						<a href="/auth/logout">Log out</a> |
+					} else {
+						<a href="/">Home</a> |
+						<a href="/sign-up">Sign up</a> |
+					}
+				</nav>
+				<hr/>
+			</header>
 			<main>
-				<header>
-					<h1>AUTO JOB</h1>
-					<p>
-						A simple site that helps you find a job through automation and
-						AI.
-					</p>
-				</header>
+				<h2>{ title }</h2>
 				{ children... }
 			</main>
 		</body>
